comparación de los modelos de clasificación

--- a/hoja07/neural_networks.ipynb
+++ b/hoja07/neural_networks.ipynb
@@ -609,6 +609,64 @@
     "\n",
     "Como bien se mencionó en el apartado anterior, las equivocaciones del modelo están relacionadas con la precisión y la sensibilidad del mismo, en los reportes de clasificación se puede observar, como a pesar de que al clasificar las casas caras el algoritmo es bastante \"sensible\" o certero, no cuenta con una precisión de 1 debido a que tiene predicciones falsas positivas (las casas clasificadas como caras que no son caras). Por lo tal, la comparación y sobre todo la decisión de escoger el mejor algoritmo de clasificación depende del problema que se busca resolver o cuál es la métrica que se desea optimizar en las predicciones. Sin embargo, en el caso de redes neuronales y en la mayoría de algoritos de predicción, como bien se sabe, el objetivo principal es la optimización de una función de pérdida, la cual, en este contexto, puede establecer otra métrica u otro criterio para la decisión del mejor modelo, en este caso, el modelo 1 obtuvo una optimización final de 0.206 comparado con el modelo 2 el cual obtuvo una optimización final de 5.05-e05. Si bien el modelo 2 alcanzó una optimización mayor, es decir redujo más el error, esto podría representar un *overfitting* de los datos, ya que la función se está ajustando tanto a los datos de entrenamiento que pueda ser que en un futuro no sea capaz de clasificar nuevos datos. Por lo ta, se escoge como mejor modelo, en función de la optimización alcanzada y la capacidad de poder predecir con el menor número de falsos negativos como el modelo 1, o el modelo que usó la función de activació hiperbólica.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparación con los modelos de clasificación elaborados en hojas de trabajo anteriores\n",
+    "Compare los resultados del mejor modelo de esta hoja para clasificar con los resultados de los algoritmos usados para clasificar de las hojas de trabajo anteriores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En comparación con los modelos de hojas de trabajo anteriores, sin duda alguna el modelo elborado con redes neuronales es uno de los mejores. Ya que ha sido uno de los que mejor ha logrado hacer la predicción de las categorías de las casas. Sin embargo, de todos los modelos desarrollados el mejor fue el trabajado con árboles de decisión, ya que acertó correctamente TODAS las categorias de las observaciones ingresadas. El modelo de árboles de decisión, al realizar su matriz de confusión evidenció que no cometió ningún error al momento de realizar las predicciones de la categorización, a diferencia del de redes neuronales, el cual sí presenta falsos positivos y falsos negativos al momento de hacer las predicciones de los datos. \n",
+    "\n",
+    "Por otro lado, también se han realizado modelos con regresiones y *support vector machines* en ambos casos no se obtuvieron resultados tan óptimos como con redes neuronales o árboles de decisión, sin embargo, hay que tomar en cuenta que en estos casos, es necesaria una prueba de parámetros que permita ir modificando el modelo a medida de que se ajuste lo mejor posible a los datos. Es por ello, que si bien, en este caso el modelo de redes neuronales fue el mejor prediciendo al conjunto de datos provisto, ya que en el caso de regresión logística el modelo se equivocaba demasiado, principalmente al hacer la predicción de casas intermedias y por otro lado, en el caso de *support vector machines* si bien, en cuestión de exactitud, el modelo alcanzó un valor de 93% este aún es más bajo que el alcanzado por las redes neuronales. \n",
+    "\n",
+    "Algo que si es importante a tomar en cuenta es que si bien el modelo de árboles de decisión fue el mejor modelo desarrollado, el resto de modelos trabajados se pueden mejorar y conseguir los parámetros óptimos mediante una validación cruzada y así garantizar el mejor *fit* a los datos y con ello obtener mejores predicciones. Por otro lado, también los modelos, como *support vector machines* son muchos más rápidos que las redes neuronales y que los árboles de decisión. Por lo que si bien, en cuanto a efectividad el de árboles de decisión y las redes neuronales son bastante óptimo, es cuanto a tiempo no, y en este caso eso no representa un problema significativo, pero es algo que se debe de tomar en cuenta en el caso que el conjunto de datos sea muy grande.\n",
+    "\n",
+    "Al comparar los modelos se puede ver como algunos de ellos han sido bastante eficientes al momento de hacer la predicción de los tipos de casas, y otros han sido más óptimo en el tiempo que toma desarrollar el modelo. En todos los casos, los modelos es posible mejorarlos mediante la prueba de diferentes combinaciones de parámetros que permitan que el modelo haga un mejor ajuste de los datos, por lo que, si bien, en este caso particular, el modelo de árboles de decisión fue el mejor, eso no implica que los otros modelos no puedan llegar a ser igual de buenos. \n",
+    "\n",
+    "En el caso de las redes neuronales, se pudo observar que con diferentes combianciones de parámetros se obtenían diferentes resultados, y a medida que se agregaban más capas con mayor cantidad de neuronas, sí se lograba una mejor predicción, pero se corría el riesgo de que dicho modelo sufriera de *overfitting*, lo cual es algo a favor de los árboles de decisión, ya que estos, por su estructura, son menos propensos a sufrir *overfitting* además de ser menos influenciados por los *outliers*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regresión\n",
+    "Genere dos modelos de regresión con redes neuronales con diferentes topologías y funciones de activación para predecir el precio de las casas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Antes de inicar a elaborar los modelos de regresión, primero es necesario modificar los datos de entrenamiento y prueba para que ahora la variable objetivo sea el precio de las casas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nuevos conjunto de prueba y entrenamiento\n",
+    "target = selected_train.pop('SalePrice')\n",
+    "predictors = selected_train.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors_train, predictors_test, target_train, target_test = train_test_split(predictors, target, train_size  = 0.7, shuffle = True, random_state=19195)"
+   ]
   }
  ],
  "metadata": {
