modelos de regresión

--- a/hoja07/neural_networks.ipynb
+++ b/hoja07/neural_networks.ipynb
@@ -667,6 +667,40 @@
    "source": [
     "predictors_train, predictors_test, target_train, target_test = train_test_split(predictors, target, train_size  = 0.7, shuffle = True, random_state=19195)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El primer modelo de regresión a elaborar por medio de redes neuronales, se utilizaran 3 capas, la primera con 16 neuronas, la segunda con 8 y la última con 10 neuronas, con una función de activación *ReLu* y con un *solver adam* para la optimización de los pesos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adam_rg_model =MLPRegressor(hidden_layer_sizes=(16, 8, 10), activation='relu', solver='adam', max_iter=2000, random_state=123)\n",
+    "adam_rg_model.fit(predictors_train, target_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el segundo modelo de regresión a elaborar por medio de redes neuronales, se utilizaran 5 capas, la primera con 9 neuronas, la segunda con 12, la tercera con 12, la cuarta con 4 y la última con 8 neuronas, con una función de activación *ReLu* y con un *solver lbfgs* para la optimización de los pesos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lbfgs_rg_model =MLPRegressor(hidden_layer_sizes=(9, 12, 12, 4, 8), activation='relu', solver='lbfgs', max_iter=1000, random_state=123456)\n",
+    "lbfgs_rg_model.fit(predictors_train, target_train)"
+   ]
   }
  ],
  "metadata": {
